@@ -150,10 +150,16 @@ instance (NFData t) => NFData (PDecl' t) where
               rnf x2 `seq`
                 rnf x3 `seq`
                   rnf x4 `seq` rnf x5 `seq` rnf x6 `seq` rnf x7 `seq` rnf x8 `seq` rnf x9 `seq` rnf x10 `seq` rnf x11 `seq` ()
-        rnf (PClass x1 x2 x3 x4 x5 x6 x8 x7 x9)
+        rnf (PClass x1 x2 x3 x4 x5 x6 x8 x7 x9 x10 x11)
           = rnf x1 `seq`
               rnf x2 `seq`
-                rnf x3 `seq` rnf x4 `seq` rnf x5 `seq` rnf x6 `seq` rnf x7 `seq` rnf x8 `seq` rnf x9 `seq` ()
+                rnf x3 `seq`
+                  rnf x4 `seq`
+                    rnf x5 `seq`
+                      rnf x6 `seq`
+                        rnf x7 `seq`
+                          rnf x8 `seq`
+                            rnf x9 `seq` rnf x10 `seq` rnf x11 `seq` ()
         rnf (PInstance x1 x2 x3 x4 x5 x6 x7 x8 x9 x10)
           = rnf x1 `seq`
               rnf x2 `seq`
