@@ -1186,7 +1186,7 @@ instance (Binary t) => Binary (PDecl' t) where
                                                 put x9
                                                 put x10
                                                 put x11
-                PClass x1 x2 x3 x4 x5 x6 x7 x8 x9
+                PClass x1 x2 x3 x4 x5 x6 x7 x8 x9 x10 x11
                                          -> do putWord8 7
                                                put x1
                                                put x2
@@ -1197,6 +1197,8 @@ instance (Binary t) => Binary (PDecl' t) where
                                                put x7
                                                put x8
                                                put x9
+                                               put x10
+                                               put x11
                 PInstance x1 x2 x3 x4 x5 x6 x7 x8 x9 x10 ->
                   do putWord8 8
                      put x1
@@ -1299,7 +1301,9 @@ instance (Binary t) => Binary (PDecl' t) where
                            x7 <- get
                            x8 <- get
                            x9 <- get
-                           return (PClass x1 x2 x3 x4 x5 x6 x7 x8 x9)
+                           x10 <- get
+                           x11 <- get
+                           return (PClass x1 x2 x3 x4 x5 x6 x7 x8 x9 x10 x11)
                    8 -> do x1 <- get
                            x2 <- get
                            x3 <- get
