@@ -166,11 +166,11 @@ removeOrphans :: [NsItem] -- ^ List to remove orphans from
               -> [NsItem] -- ^ Orphan-free list
 removeOrphans list =
   let children = S.fromList $ concatMap (names . (\(_, d, _) -> d)) list
-  in  filter ((`S.notMember` children) . (\(n, _, _) -> n)) list
+  in  filter ((flip S.notMember children) . (\(n, _, _) -> n)) list
 
-  where names (Just (DataDoc _ fds))          = map (\(FD n _ _ _ _) -> n) fds
-        names (Just (ClassDoc _ _ fds _ _ _ _)) = map (\(FD n _ _ _ _) -> n) fds
-        names _                               = []
+  where names (Just (DataDoc _ fds))              = map (\(FD n _ _ _ _) -> n) fds
+        names (Just (ClassDoc _ _ fds _ _ _ _ c)) = map (\(FD n _ _ _ _) -> n) fds ++ map (\(FD n _ _ _ _) -> n) (maybeToList c)
+        names _                                   = []
 
 -- | Whether a Name names something which should be documented
 filterName :: Name -- ^ Name to check
@@ -218,13 +218,13 @@ referredNss (n, Just d, _) =
       names  = concatMap (extractPTermNames) ts
   in  S.map getNs $ S.fromList names
 
-  where getFunDocs (FunDoc f)                = [f]
-        getFunDocs (DataDoc f fs)            = f:fs
-        getFunDocs (ClassDoc _ _ fs _ _ _ _) = fs
-        getFunDocs (NamedInstanceDoc _ fd)   = [fd]
-        getFunDocs (ModDoc _ _)              = []
-        types (FD _ _ args t _)            = t:(map second args)
-        second (_, x, _, _)                = x
+  where getFunDocs (FunDoc f)                  = [f]
+        getFunDocs (DataDoc f fs)              = f:fs
+        getFunDocs (ClassDoc _ _ fs _ _ _ _ _) = fs
+        getFunDocs (NamedInstanceDoc _ fd)     = [fd]
+        getFunDocs (ModDoc _ _)                = []
+        types (FD _ _ args t _)                = t:(map second args)
+        second (_, x, _, _)                    = x
 
 
 -- | Returns an NsDict of containing all known namespaces and their contents
@@ -579,7 +579,7 @@ createOtherDoc :: IState -- ^ Needed to determine the types of names
                -> H.Html -- ^ Resulting HTML
 createOtherDoc ist (FunDoc fd)                = createFunDoc ist fd
 
-createOtherDoc ist (ClassDoc n docstring fds _ _ _ _) = do
+createOtherDoc ist (ClassDoc n docstring fds _ _ _ _ c) = do
   H.dt ! (A.id $ toValue $ show n) $ do
     H.span ! class_ "word" $ do "class"; nbsp
     H.span ! class_ "name type"
@@ -588,7 +588,7 @@ createOtherDoc ist (ClassDoc n docstring fds _ _ _ _) = do
     H.span ! class_ "signature" $ nbsp
   H.dd $ do
     (if nullDocstring docstring then Empty else Docstrings.renderHtml docstring)
-    H.dl ! class_ "decls" $ forM_ fds (createFunDoc ist)
+    H.dl ! class_ "decls" $ (forM_ (maybeToList c ++ fds) (createFunDoc ist))
 
   where name (NS n ns) = show (NS (sUN $ name n) ns)
         name n         = let n' = show n
